2010-02-09  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Upstream DevTools Images and .css files.

        https://bugs.webkit.org/show_bug.cgi?id=34756

        * WebKit.gypi:
        * src/js/DevTools.css: Added.
        * src/js/Images/segmentChromium.png: Added.
        * src/js/Images/segmentHoverChromium.png: Added.
        * src/js/Images/segmentHoverEndChromium.png: Added.
        * src/js/Images/segmentSelectedChromium.png: Added.
        * src/js/Images/segmentSelectedEndChromium.png: Added.
        * src/js/Images/statusbarBackgroundChromium.png: Added.
        * src/js/Images/statusbarBottomBackgroundChromium.png: Added.
        * src/js/Images/statusbarButtonsChromium.png: Added.
        * src/js/Images/statusbarMenuButtonChromium.png: Added.
        * src/js/Images/statusbarMenuButtonSelectedChromium.png: Added.

2010-02-09  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Upstream JavaScript part of DevTools WebKit API implementation(now
        with the added files).

        https://bugs.webkit.org/show_bug.cgi?id=34744

        * WebKit.gypi: Added.
        * src/js/DebuggerAgent.js: Added.
        (devtools.DebuggerAgent):
        (devtools.DebuggerAgent.prototype.reset):
        (devtools.DebuggerAgent.prototype.initUI):
        (devtools.DebuggerAgent.prototype.resolveScriptSource.this.requestSeqToCallback_.cmd.getSequenceNumber):
        (devtools.DebuggerAgent.prototype.resolveScriptSource):
        (devtools.DebuggerAgent.prototype.pauseExecution):
        (devtools.DebuggerAgent.prototype.addBreakpoint):
        (devtools.DebuggerAgent.prototype.removeBreakpoint):
        (devtools.DebuggerAgent.prototype.updateBreakpoint):
        (devtools.DebuggerAgent.prototype.stepIntoStatement):
        (devtools.DebuggerAgent.prototype.stepOutOfFunction):
        (devtools.DebuggerAgent.prototype.stepOverStatement):
        (devtools.DebuggerAgent.prototype.resumeExecution):